--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -2,10 +2,14 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <include layout="@layout/must_numbers" />
+
     <include layout="@layout/must_not_numbers" />
+
     <include layout="@layout/limit_sequential_numbers" />
+
+    <include layout="@layout/exclude_won_combinations" />
 </LinearLayout>
