--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,13 @@
             android:id="@+id/draw_btn"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
+            android:background="#234ec4"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="הגרל מחדש"
+            android:textColor="@color/white"
+            android:typeface="monospace"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/table" />
@@ -39,7 +44,12 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
+            android:background="#234ec4"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="שפר סיכויים"
+            android:textColor="@color/white"
+            android:typeface="monospace"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/draw_btn" />
@@ -49,7 +59,12 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
+            android:background="#234ec4"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="צפייה בכל הזכיות"
+            android:textColor="#f77"
+            android:typeface="monospace"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/filter_btn" />
