--- a/app/src/main/res/layout/filter_drawer.xml
+++ b/app/src/main/res/layout/filter_drawer.xml
@@ -2,7 +2,8 @@
 <com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/filter_drawer"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
+    android:layout_marginStart="20dp"
     android:layout_height="match_parent"
     android:layout_gravity="end"
     android:fitsSystemWindows="true"
